Update CollectionsDemo to use toList() for collecting stream results